@@ -1,6 +1,7 @@
 package com.gusgd.catalogo.services;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
@@ -9,6 +10,7 @@ import com.gusgd.catalogo.dto.CategoryDTO;
 import com.gusgd.catalogo.entities.Category;
 import com.gusgd.catalogo.repositories.CategoryRepository;
 
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
@@ -17,9 +19,15 @@ public class CategoryService {
 	
 	private final CategoryRepository repository;
 
+	@Transactional(readOnly = true)
 	public List<CategoryDTO> findAll(){
 			List<Category> list = repository.findAll();
-			return list.stream().map(x -> new CategoryDTO(x)).collect(Collectors.toList());
+			return list.stream().map(CategoryDTO::new).toList();
 	}
-	
+
+	@Transactional(readOnly = true)
+	public CategoryDTO findById(Long id){
+		Category category = repository.findById(id).orElseThrow(()-> new ResourceNotFoundException("Category not found."));
+		return new CategoryDTO(category);
+	}
 }
